openapi expanded model demo
